--- a/requirements.txt
+++ b/requirements.txt
@@ -103,7 +103,7 @@ pyphen==0.17.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
-pywin32==310
+pywin32==310; sys_platform == "win32"
 PyYAML>=6.0
 pyzmq==26.2.0
 referencing==0.36.2
