--- a/requirements.txt
+++ b/requirements.txt
@@ -5,52 +5,75 @@ altair==5.5.0
 annotated-types==0.7.0
 anyio==4.8.0
 appnope==0.1.4
+asgiref==3.8.1
 asttokens==2.4.1
 attrs==25.1.0
+backoff==2.2.1
 basketball_reference_web_scraper==4.15.3
 bcrypt==4.2.1
 beautifulsoup4==4.12.3
 blinker==1.9.0
 Brotli==1.1.0
 bs4==0.0.2
+build==1.2.2.post1
+cachetools==5.5.2
 cairocffi==1.7.1
 CairoSVG==2.7.1
 certifi==2024.8.30
 cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.0
+chroma-hnswlib==0.7.6
+chromadb==1.0.5
 click==8.1.8
 colorama==0.4.6
+coloredlogs==15.0.1
 comm==0.2.2
 contourpy==1.3.1
 coverage==7.6.10
-chromadb>=0.4.1
 cssselect2==0.8.0
 cycler==0.12.1
+datasets==3.5.0
 debugpy==1.8.7
 decorator==5.1.1
 defusedxml==0.7.1
+Deprecated==1.2.18
+dill==0.3.8
 distro==1.9.0
+docker-pycreds==0.4.0
+durationpy==0.9
 et_xmlfile==2.0.0
 executing==2.1.0
 Faker==35.2.0
+fastapi==0.115.9
 fastjsonschema==2.21.1
 filelock==3.17.0
 Flask==3.1.0
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
+flatbuffers==25.2.10
 fonttools==4.55.3
 frozenlist==1.5.0
-fsspec==2025.2.0
+fsspec==2024.12.0
 git-filter-repo==2.47.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-auth==2.39.0
+googleapis-common-protos==1.70.0
 greenlet==3.1.1
+grpcio==1.71.0
 h11==0.14.0
 httpcore==1.0.7
+httptools==0.6.4
 httpx==0.28.1
+huggingface-hub==0.30.2
+humanfriendly==10.0
 idna==3.10
 imbalanced-learn==0.13.0
 imblearn==0.0
+importlib_metadata==8.6.1
+importlib_resources==6.5.2
 ipykernel==6.29.5
 ipython==8.29.0
 itsdangerous==2.2.0
@@ -63,21 +86,42 @@ jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
+kubernetes==32.0.1
 lxml==5.3.0
+Markdown==3.8
+markdown-it-py==3.0.0
 markdown2==2.5.3
 MarkupSafe==3.0.2
 matplotlib==3.10.0
 matplotlib-inline==0.1.7
+mdurl==0.1.2
+mmh3==5.1.0
+monotonic==1.6
 mpmath==1.3.0
 multidict==6.1.0
+multiprocess==0.70.16
 mysql-connector-python==9.1.0
 narwhals==1.27.1
 nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.4.2
 numpy==2.1.3
+oauthlib==3.2.2
+onnxruntime==1.21.1
 openai==1.63.2
 openpyxl==3.1.5
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp-proto-common==1.32.1
+opentelemetry-exporter-otlp-proto-grpc==1.32.1
+opentelemetry-instrumentation==0.53b1
+opentelemetry-instrumentation-asgi==0.53b1
+opentelemetry-instrumentation-fastapi==0.53b1
+opentelemetry-proto==1.32.1
+opentelemetry-sdk==1.32.1
+opentelemetry-semantic-conventions==0.53b1
+opentelemetry-util-http==0.53b1
+orjson==3.10.16
+overrides==7.7.0
 packaging==24.1
 pandas==2.2.3
 parso==0.8.4
@@ -85,13 +129,18 @@ pexpect==4.9.0
 pillow==11.1.0
 platformdirs==4.3.6
 plotly==6.0.0
+posthog==3.25.0
 prettyjson==1.0.3
 prompt_toolkit==3.0.48
 propcache==0.2.1
+protobuf==5.29.4
 psutil==6.1.0
 psycopg2==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
@@ -100,43 +149,63 @@ pydyf==0.11.0
 Pygments==2.18.0
 pyparsing==3.2.1
 pyphen==0.17.2
+PyPika==0.48.9
+pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
-pywin32==310; sys_platform == "win32"
-PyYAML>=6.0
+PyYAML==6.0.2
 pyzmq==26.2.0
 referencing==0.36.2
 reportlab==4.3.1
 requests==2.32.3
+requests-oauthlib==2.0.0
+rich==14.0.0
 rpds-py==0.22.3
+rsa==4.9.1
 scikit-learn==1.6.1
 scipy==1.15.1
 seaborn==0.13.2
+sentry-sdk==2.26.1
+setproctitle==1.3.5
+shellingham==1.5.4
 six==1.16.0
 sklearn-compat==0.1.3
+smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.36
 stack-data==0.6.3
+starlette==0.45.3
 sympy==1.13.1
+tenacity==9.1.2
 threadpoolctl==3.5.0
 tinycss2==1.4.0
 tinyhtml5==2.0.0
+tokenizers==0.21.1
 torch==2.6.0
 tornado==6.4.1
 tqdm==4.67.1
 traitlets==5.14.3
+typer==0.15.2
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+uvicorn==0.34.2
+uvloop==0.21.0
 vega-datasets==0.9.0
-wandb>=0.6.1
+wandb==0.19.9
+watchfiles==1.0.5
 wcwidth==0.2.13
 weasyprint==65.0
 webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
 Werkzeug==3.1.3
 whisper==1.1.10
+wrapt==1.17.2
 xgboost==2.1.4
+xxhash==3.5.0
 yarl==1.18.3
+zipp==3.21.0
 zopfli==0.2.3.post1
