--- a/requirements.txt
+++ b/requirements.txt
@@ -82,6 +82,7 @@ seaborn==0.13.2
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
+streamlit==1.44.1
 sympy==1.13.1
 threadpoolctl==3.5.0
 tinycss2==1.4.0
