--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohappyeyeballs==2.4.6
 aiohttp==3.11.12
 aiosignal==1.3.2
 altair==5.5.0
+annotated-types==0.7.0
 anyio==4.8.0
 asttokens==2.4.1
 attrs==25.1.0
@@ -60,12 +61,14 @@ packaging==24.1
 pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
+pillow==11.1.0
 platformdirs==4.3.6
 plotly==6.0.0
 prompt_toolkit==3.0.48
 propcache==0.2.1
 psutil==6.1.0
 ptyprocess==0.7.0
+python-dateutil==2.9.0.post0
 pure_eval==0.2.3
 pycparser==2.22
 pydantic==2.10.6
@@ -73,6 +76,7 @@ pydantic_core==2.27.2
 pydyf==0.11.0
 pyparsing==3.2.1
 pyphen==0.17.2
+PyYAML>=6.0
 pytz==2024.2
 referencing==0.36.2
 reportlab==4.3.1
