--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,8 @@ data/
 models/
 .DS_Store
 *.DS_Store
+ms_marco_entry.txt
+PROJECT_DOCUMENTATION.html
+PROJECT_DOCUMENTATION.md
+scripts/generate_project_doc.py
+marco_entry.txt
